# seguru

./: .gitignore  .gitmodules  LICENSE  README.md  rust-toolchain.toml
benchmark/: Cargo.toml  bench.sh
benchmark/.cargo/: config.toml
benchmark/benches/: adamw.rs  encoder.rs  fused.rs  gelu.rs  layernorm.rs  matmul.rs  permute.rs  residual.rs  softmax.rs
benchmark/benches/common/: empty.rs  mod.rs
benchmark/src/: main.rs
casestudies-by-agent/: Cargo.toml  README.md  TUTORIAL-by-agent.md
casestudies-by-agent/aes/: README.md  REPORT.md
casestudies-by-agent/aes/cuda/: aes_kernels.h
casestudies-by-agent/aes/src/: aes_common.rs
casestudies-by-agent/gpusorting/: Cargo.toml  build.rs
casestudies-by-agent/gpusorting/cuda/: sort_bench.cu
casestudies-by-agent/gpusorting/src/: cuda_ffi.rs  downsweep.rs  lib.rs  scan.rs  tests.rs  upsweep.rs  utils.rs
casestudies-by-agent/heongpu/: Cargo.toml  README.md  REPORT.md
casestudies-by-agent/heongpu/cuda/: bench_kernels.cu
casestudies-by-agent/heongpu/src/: addition.rs  bootstrapping.rs  decryption.rs  encoding.rs  lib.rs  modular.rs  multiplication.rs  switchkey.rs
casestudies-by-agent/kernelbench/: .gitignore
casestudies-by-agent/kernelbench/cuda/: argmax_dim.cu  cumsum.cu  empty.cu  gelu.cu  l1_norm.cu  l2_norm.cu  max_dim.cu  max_pool1d.cu  mean_dim.cu  mse_loss.cu  relu.cu  rms_norm.cu  softmax.cu  softplus.cu  sum_dim.cu  swish.cu
casestudies-by-agent/kernelbench/python/: compare.py  compare2.py  driver.py  launch_overhead.py
casestudies-by-agent/kernelbench/src/: cumsum.rs  empty.rs  gelu.rs  l1_norm.rs  layer_norm.rs  log_softmax.rs  main.rs  mean_dim.rs  mse_loss.rs  relu.rs  sigmoid.rs  softmax.rs  swish.rs  tanh.rs
casestudies-by-agent/polybench/atax/: Cargo.toml
casestudies-by-agent/polybench/bicg/: Cargo.toml
casestudies-by-agent/polybench/conv2d/: Cargo.toml
casestudies-by-agent/polybench/corr/: Cargo.toml
casestudies-by-agent/polybench/covar/: Cargo.toml
casestudies-by-agent/polybench/gemm/: Cargo.toml
casestudies-by-agent/polybench/gesummv/: Cargo.toml
casestudies-by-agent/polybench/gramschm/: Cargo.toml
casestudies-by-agent/polybench/jacobi1d/: Cargo.toml
casestudies-by-agent/polybench/lu/: Cargo.toml
casestudies-by-agent/polybench/mvt/: Cargo.toml
casestudies-by-agent/polybench/syr2k/: Cargo.toml
casestudies-by-agent/polybench/syrk/: Cargo.toml
casestudies-by-agent/polybench/threemm/: Cargo.toml
casestudies-by-agent/polybench/twomm/: Cargo.toml
casestudies/llm-rs/rust/: Cargo.toml  rust-toolchain.toml
compiler/rustc_codegen_ssa/: Cargo.toml
compiler/rustc_codegen_ssa/src/: lib.rs
crates/: Cargo.toml  README.md  rust-toolchain.toml  rustc_codegen_ssa_gpu
crates/.cargo/: config.toml
crates/cuda_bindings/: Cargo.toml  build.rs
crates/cuda_bindings/libcuda_bindings/: lib.cu  lib.h
crates/cuda_bindings/src/: bindings.rs  chunk.rs  ctx.rs  host_mem.rs  lib.rs  mem.rs  params.rs  sized_or_slice.rs
crates/gpu/: Cargo.toml
crates/gpu-host/: Cargo.toml
crates/gpu-host/src/: ctx.rs  lib.rs
crates/gpu-macros/: Cargo.toml
crates/gpu-macros/src/: arch.rs  gpu_syntax.rs  host_rewriter.rs  kernel_rewriter.rs  lib.rs  reshape_map.rs
crates/gpu-name/: Cargo.toml
crates/gpu-name/src/: lib.rs
crates/gpu-test/: Cargo.toml
crates/gpu-test-arith-basic/: Cargo.toml
crates/gpu-test-arith-basic/src/: lib.rs
crates/gpu-test-basic/: Cargo.toml  log.2  test.mlir
crates/gpu-test-basic/src/: lib.rs
crates/gpu-test/src/: lib.rs  main.rs
crates/gpu/src/: arch.rs  array.rs  cg.rs  chunk.rs  chunk_impl.rs  chunk_scope.rs  device_intrinsic.rs  dim.rs  floatn.rs  global.rs  host_dev.rs  iter.rs  ldst.rs  lib.rs  prelude.rs  print.rs  shared.rs  sync.rs  thread.rs  tile.rs  vector.rs
crates/manual-test-gpu-arith/: Cargo.toml
crates/manual-test-gpu-arith/src/: lib.rs
crates/manual-test-host-arith/: Cargo.toml  build.rs
crates/manual-test-host-arith/src/: lib.rs
crates/mlir-compile/: Cargo.toml
crates/mlir-compile/src/: lib.rs  main.rs
crates/rustc-gpu/: Cargo.toml  build.rs
crates/rustc-gpu/src/: codegen.rs  driver.rs  main.rs
crates/rustc_codegen_gpu/: Cargo.toml  build.rs
crates/rustc_codegen_gpu/.cargo/: config.toml
crates/rustc_codegen_gpu/src/: attr.rs  backend.rs  codegen.rs  error.rs  lib.rs  mir_analysis.rs  mir_mut_arg_check.rs  mir_thread_sync_check.rs  mlir.rs  scope.rs  write.rs
crates/rustc_codegen_gpu/tests/: codegen_tests.rs
crates/rustc_codegen_llvm/: Cargo.toml
crates/rustc_codegen_llvm/src/: abi.rs  allocator.rs  asm.rs  attributes.rs  base.rs  builder.rs  callee.rs  common.rs  consts.rs  context.rs  declare.rs  errors.rs  intrinsic.rs  lib.rs  llvm_util.rs  mono_item.rs  type_.rs  type_of.rs  va_arg.rs
crates/rustc_codegen_ssa_gpu/: Cargo.toml  messages.ftl
crates/rustc_codegen_ssa_gpu/src/: assert_module_sources.rs  base.rs  codegen_attrs.rs  common.rs  errors.rs  lib.rs  meth.rs  mono_item.rs  size_of_val.rs  target_features.rs
crates/rustc_llvm/: Cargo.toml  build.rs
crates/rustc_llvm/src/: lib.rs
examples/: Cargo.toml
examples/.cargo/: config.toml
examples/aes/: Cargo.toml
examples/aes-by-agent/: Cargo.toml  README.md  REPORT.md  build.rs
examples/aes-by-agent/src/: cuda_ffi.rs
examples/aes/cuda/: aes_kernels.cu  aes_kernels.h
examples/aes/src/: lib.rs
examples/bench/: Cargo.toml
examples/bench-layernorm/: Cargo.toml
examples/bench-polybench/: Cargo.toml
examples/gpu-test-arith-basic/: Cargo.toml
examples/hello/: Cargo.toml
examples/heongpu-by-agent/: README.md  REPORT.md  build.rs
examples/histogram/: Cargo.toml
examples/kernelbench/: .gitignore  Cargo.toml  OPTIMIZATION_REPORT.md  REPORT.md  bench_pytorch.py  build.rs  compare.py  report.md  run_bench.sh
examples/kernelbench-b/: Cargo.toml
examples/kernelbench-c/: .gitignore  Cargo.toml
examples/llm-rs-gpu/: Cargo.toml
examples/manual-test-gpu-arith/: Cargo.toml
examples/manual-test-host-arith/: Cargo.toml  build.rs
examples/matrix/: README.md
examples/reduce/: Cargo.toml
examples/vector_add/: Cargo.toml
(+611 files in other folders)
