[workspace]
members = [
    "hello",
    "histogram",
    "llm-rs-gpu",
    "matrix/matmul-gpu",
    "matrix/matmul-host",
    "polybench/conv2d",
    "polybench/gemm",
    "polybench/gesummv",
    "polybench/atax",
    "polybench/bicg",
    "polybench/mvt",
    "polybench/syr2k",
    "polybench/twomm",
    "polybench/threemm",
    "polybench/covar",
    "polybench/syrk",
    "reduce",
    "syntax/gpu",
    "syntax/host",
    "vector_add",
]
resolver = "1"

[workspace.dependencies]
gpu_host = {path = "../crates/gpu-host"}
gpu = { path = "../crates/gpu" }
syntax_gpu = {path = "syntax/gpu"}

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = false
