[workspace]
members = [
    "hello",
    "histogram",
    "llm-rs-gpu",
    "matrix/matmul-gpu",
    "matrix/matmul-host",
    "polybench/conv2d",
    "polybench/gemm",
    "polybench/gesummv",
    "polybench/atax",
    "polybench/bicg",
    "polybench/mvt",
    "polybench/syr2k",
    "polybench/twomm",
    "polybench/threemm",
    "polybench/covar",
    "polybench/corr",
    "polybench/gramschm",
    "polybench/doitgen",
    "polybench/lu",
    "polybench/syrk",
    "polybench/jacobi1d",
    "polybench/jacobi2d",
    "polybench/fdtd2d",
    "polybench/conv3d",
    "reduce",
    "syntax/gpu",
    "syntax/host",
    "vector_add",
    "bench",
    "bench-polybench",
]
resolver = "1"

[workspace.dependencies]
gpu_host = {path = "../crates/gpu-host"}
gpu = { path = "../crates/gpu" }
syntax_gpu = {path = "syntax/gpu"}

[profile.dev]
overflow-checks = true

[profile.release]
overflow-checks = false
