[package]
name = "rustc_codegen_ssa_gpu"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
#ar_archive_writer = "0.4.2"
arrayvec = { version = "0.7", default-features = false }
bitflags = "2.4.1"
bstr = "1.11.3"
# Pinned so `cargo update` bumps don't cause breakage. Please also update the
# `cc` in `rustc_llvm` if you update the `cc` here.
cc = "=1.2.17"
either = "1.5.0"
itertools = "0.12"
pathdiff = "0.2.0"
regex = "1.4"
#rustc_abi = { path = "../../../rust/compiler/rustc_abi" }
#rustc_arena = { path = "../../../rust/compiler/rustc_arena" }
#rustc_ast = { path = "../../../rust/compiler/rustc_ast" }
#rustc_attr_parsing = { path = "../../../rust/compiler/rustc_attr_parsing" }
#rustc_data_structures = { path = "../../../rust/compiler/rustc_data_structures" }
#rustc_errors = { path = "../../../rust/compiler/rustc_errors" }
#rustc_fluent_macro = { path = "../../../rust/compiler/rustc_fluent_macro" }
#rustc_fs_util = { path = "../../../rust/compiler/rustc_fs_util" }
#rustc_hashes = { path = "../../../rust/compiler/rustc_hashes" }
#rustc_hir = { path = "../../../rust/compiler/rustc_hir" }
#rustc_incremental = { path = "../../../rust/compiler/rustc_incremental" }
#rustc_index = { path = "../../../rust/compiler/rustc_index" }
#rustc_macros = { path = "../../../rust/compiler/rustc_macros" }
#rustc_metadata = { path = "../../../rust/compiler/rustc_metadata" }
#rustc_middle = { path = "../../../rust/compiler/rustc_middle" }
#rustc_query_system = { path = "../../../rust/compiler/rustc_query_system" }
#rustc_serialize = { path = "../../../rust/compiler/rustc_serialize" }
#rustc_session = { path = "../../../rust/compiler/rustc_session" }
#rustc_span = { path = "../../../rust/compiler/rustc_span" }
#rustc_symbol_mangling = { path = "../../../rust/compiler/rustc_symbol_mangling" }
#rustc_target = { path = "../rustc_target" }
#rustc_trait_selection = { path = "../../../rust/compiler/rustc_trait_selection" }
serde_json = "1.0.59"
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
#tempfile = "3.2"
#thin-vec = "=0.2.13"
thorin-dwp = "0.9"
tracing = "0.1"
wasm-encoder = "0.219"
# tidy-alphabetical-end
#object = { version = "0.36.2", features = ["all", "rustc-dep-of-std"] }

[target.'cfg(unix)'.dependencies]
# tidy-alphabetical-start
libc = "0.2.50"
# tidy-alphabetical-end

[dependencies.object]
version = "0.36.2"
default-features = false
features = ["read_core", "elf", "macho", "pe", "xcoff", "unaligned", "archive", "write", "wasm"]

[target.'cfg(windows)'.dependencies.windows]
version = "0.59.0"
features = ["Win32_Globalization"]
