[package]
name = "gpu_macros"
version = "0.1.0"
edition = "2024"

[dependencies]
syn = {version  = "2.0.100", features = ["full", "visit-mut"] }
proc-macro2 = {version = "1.0.95", features = ["span-locations"]}
quote = "1.0"

[lib]
proc-macro = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(gpu_codegen)'] }