[package]
name = "gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
cuda_bindings = { workspace = true, features = ["gpu"]}
num-traits = { workspace = true }
gpu_macros = {workspace = true}
vstd = { path = "../../../verus/source/vstd" }

[dev-dependencies]
gpu_macros = {workspace = true}
[features]
default = []
codegen_tests = []
unstable_host_chunk = [] # only used in an old matmul example.

[package.metadata.verus]
verify = true

[package.metadata.verus.ide]
extra_args = "--expand-errors"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(verus_keep_ghost)'] }
