[package]
name = "gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
cuda_bindings = { workspace = true, features = ["gpu"]}
num-traits = { workspace = true }
gpu_macros = {workspace = true}


[dev-dependencies]
gpu_macros = {workspace = true}
[features]
default = []
codegen_tests = []

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(verus_keep_ghost)'] }
