[package]
name = "rustc_codegen_gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
rustc_codegen_ssa_gpu = { package = "rustc_codegen_ssa", path = "../../compiler/rustc_codegen_ssa" }

melior = { version = "0.25.0", features = ["helpers"]}
melior-macro = { version = "0.17.0"}
mlir-sys = "0.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
mlir-compile = {path = "../mlir-compile"}
gpu_name = {path = "../gpu-name"}

[lib]
crate-type = ["dylib"]

[[bin]]
name = "filecheck"
path = "tests/bin/filecheck.rs"

[dev-dependencies]
compiletest_rs = "0.9.0"
gpu_macros = {path = "../gpu-macros", features = ["codegen_tests"]}
cuda_bindings = {path = "../cuda_bindings"}
typed-arena = "2.0"

[package.metadata.rust-analyzer]
rustc_private = true

[features]
default = ["inplace_bound_check"]
arith_immediate_bound_check = [] # force access a dummy ptr
inplace_bound_check = []
trap_bound_check = [] # Use standard panic-bound-check: if out-of-bound {trap}
