[package]
name = "manual-test-host-arith"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["bin"]

[dependencies]
cuda_bindings = {path = "../../crates/cuda_bindings"}
manual-test-gpu-arith = {path = "../manual-test-gpu-arith"}
gpu_macros = { path = "../../crates/gpu-macros" }
gpu = { path = "../../crates/gpu" }
