[package]
name = "rustc_codegen_ssa"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
arrayvec = { version = "0.7", default-features = false }
bitflags = "2.4.1"
bstr = "1.11.3"
find-msvc-tools = "0.1.2"
itertools = "0.12"
pathdiff = "0.2.0"
regex = "1.4"
serde_json = "1.0.59"
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
#tempfile = "3.2"
#thin-vec = "=0.2.13"
thorin-dwp = "0.9"
tracing = "0.1"
wasm-encoder = "0.219"
# tidy-alphabetical-end
#object = { version = "0.36.2", features = ["all", "rustc-dep-of-std"] }

[target.'cfg(unix)'.dependencies]
# tidy-alphabetical-start
libc = "0.2.50"
# tidy-alphabetical-end

[dependencies.object]
version = "0.37.0"
default-features = false
features = ["read_core", "elf", "macho", "pe", "xcoff", "unaligned", "archive", "write", "wasm"]

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.0"
features = ["Win32_Globalization"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(llvm_enzyme)'] }